Version 7.40 - not yet released

Version 7.39 - 2023/07/28
* Android
  - fix Bluetooth device list on Android versions older than 12
  - do not request permission WRITE_EXTERNAL_STORAGE on Android 11 or newer

Version 7.38 - 2023/07/27
* WeGlide
  - fix another crash bug
* Android
  - support scanning QR codes with XCTrack tasks
  - fix location permission request on old Android versions
  - fix IllegalArgumentException crash on old Android versions
  - improved error messages for problems opening devices
  - fix crash on Android 5
  - fix conflict between "org.xcsoar" and "org.xcsoar.testing" apps

Version 7.37 - 2023/07/21
* WeGlide
  - fix crash bug
* Android
  - request ACCESS_FINE_LOCATION only when internal GPS is used
  - request BLUETOOTH_CONNECT and BLUETOOTH_SCAN only when Bluetooth is used
  - re-enable background location (yet another attempt)
  - fix crash with disallowed IOIO Accessory connection
  - remove Nook support
  - add SoftRF Ham and Midi into 'white list' of USB devices

Version 7.36 - 2023/07/02
* task
  - save outer radius and angle of custom keyholes in task files
* calculations
  - implement the "predict" option for Netcoupe FFVV, WeGlide, Charron
* WeGlide
  - allow downloading all user tasks and public task declarations
* Lua scripting
  - add blackboard.altitude_agl
* Kobo
  - fix flight durations on power-off screen
  - fix bogus last entry on power-off screen

Version 7.35 - 2023/06/16
* user interface
  - fix crash in plane list
  - show terrain, topopgraphy and airspaces on task/contest analysis pages
* calculations
  - fix bogus "Task Started" after re-entering the start zone
* fix IGC logger crash with very long turnpoint names

Version 7.34 - 2023/06/06
* user interface
  - fix crash with long InfoBox set names
  - rename "Inverse InfoBoxes" to "Dark mode"
  - planes: "New" creates an empty plane
  - planes: add "Copy" button
* map display
  - thicker border on disappeared FLARM traffic
* devices