@@ -1,4 +1,6 @@
 Version 7.40 - not yet released
+* devices
+  - added driver for LX Navigation Eos57 variometer
 
 Version 7.39 - 2023/07/28
 * Android
